# genie-claw

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LOW_LATENCY_HOME_AGENT.md  Makefile  README.md  SECURITY.md  deny.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: audit.yml  auto-label.yml  ci.yml  contribution.yml  cross.yml  scripts.yml
crates/genie-api/src/: main.rs
crates/genie-common/: Cargo.toml
crates/genie-common/src/: config.rs
crates/genie-core/: Cargo.toml
crates/genie-core/src/: agent_harness.rs  chat_ui.html  conversation.rs  lib.rs  main.rs  prompt.rs  prompt_sha.rs  reasoning.rs  repl.rs  server.rs  telegram.rs  voice_loop.rs
crates/genie-core/src/eval/: bfcl.rs  mod.rs
crates/genie-core/src/ha/: client.rs  entity_fidelity.rs  mod.rs  provider.rs
crates/genie-core/src/llm/: genie_ai_runtime.rs  llama_cpp.rs  mock.rs  mod.rs  openai_compat.rs  retry.rs
crates/genie-core/src/memory/: mod.rs  policy.rs  (+1 more)
crates/genie-core/tests/: memory_fallback_bench.rs  memory_open_bench.rs  memory_recall.rs  tool_dispatch_test.rs  tool_gate_integration_test.rs  version_flag_test.rs
crates/genie-ctl/: Cargo.toml
crates/genie-ctl/src/: bfcl_import.rs  main.rs
crates/genie-governor/src/: governor.rs
crates/genie-health/src/: checker.rs
deploy/config/: geniepod.toml
deploy/scripts/: genie-restart-all.sh  start_all.sh
deploy/systemd/: genie-ai-runtime.service  genie-whisper.service
doc/: evaluation-data.md  household-security.md  http-and-cli.md  implementation-status.md  milestone-1-portable-home-agent.md  overview.md  repo-map.md
skills/: SKILL-DEVELOPER-GUIDE.md
tests/bfcl/: README.md  home_tool_cases.jsonl  home_tool_predictions.jsonl
tests/memory/: README.md  cases.toml
tests/memory/expected/: ledger.json
tests/soak/: .gitignore  README.md  analyze_soak.py  genie-soak.sh  soak_driver.py
tests/soak/example/: journal.txt  make_fixture.py  report.md  summary.json  telemetry.jsonl
(+12 files in other folders)
