[package]
name = "genie-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types, tegrastats parser, and configuration for GeniePod system services"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
zeroize = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
webpki-roots = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
